1.15.25
------
(RB=311122)
Decoders for responses that require a non-null dataMap will now return null if passed a null dataMap in wrapResponse.

(RB=310817)
Allow filters access to strongly typed Ids in batch create responses.

1.15.24
-------
add new method to set partitionData in ZKAnnouncerJMX
expose method to access zkannouncer from ZooKeeperConnectionManager
(RB=310960)

1.15.23
-------
(RB=303020)
Allow for clients to recieve strongly-typed keys returned from batch creates.
old builders can cast CreateStatus to CreateIdStatus and then call .getKey
new builders simply return CreateIdsStatuses.

1.15.22
-------
(RB=307113)
changed rangePartition properties to long because in the actual property, it's long not int

1.15.21
-------
(RB=306535)
Fix toString, equals and hashCode on idResponse

(RB=306516)
Add ability to suppress regex matching failure warning via service properties, for cases where stickiness is desired only some of the time.

(RB=299700)
Adding a read only view of ResourceModel for filters


1.15.20
-------
(RB=288213)
Provide methods to map keys to multiple hosts in KeyMapper

1.15.19
-------
(RB=302891)
Fix java 7 warnings.

(RB=299112)
Allow for clients to recieve strongly-typed keys returned from creates.
old builder format:
CreateResponse<K> entity = (CreateResponse<K>)response.getEntity();
K key = entity.getId();
new builder format:
CreateIdResponse<K> entity = response.getEntity();
K key = entity.getId();

Additionally, added back in public wrapResponse function RestResponseDecoder that was removed in 1.15.14,
but it is marked as deprecated.

1.15.18
-------
(RB=300929)
Add trace level logging of response to DynamicClient

(RB=301656)
Make ScatterGatherResult.getRequestInfo() and .getUnmappedKeys() public. KVScatterGatherResult also.

(RB=301492)
Clean up caprep so it can be better leveraged for language independent test suite.

1.15.17
-------
(RB=299453)